--- a/_posts/2024-11-21-5.md
+++ b/_posts/2024-11-21-5.md
@@ -42,8 +42,8 @@ words:
 
 * “树 $p$”表示以 $p$ 为**根节点**的树；
 
-*  $left_x$ 表示 $x$ 的子节点；
-* $right_x$ 表示 $x$ 的右节点；
+*  $left_x$ 表示 $x$ 的左子节点；
+* $right_x$ 表示 $x$ 的右子节点；
 * $value_x$ 表示 $x$ 的权值；
 * $size_x$ 表示以 $x$ 为根的子树大小；
 * $rand_x$ 表示 $x$ 的随机优先级（解释见下文）；
