--- a/_posts/2024-12-14-9.md
+++ b/_posts/2024-12-14-9.md
@@ -16,4 +16,137 @@ words:
 >
 > 防止日后忘记。
 
-# 什么是树状数组
+# 引入
+
+> 例题 $1$：
+>
+> 已知一个数列，你需要进行下面两种操作：
+>
+> - 将某一个数加上 $x$。
+> - 求出某区间每一个数的和。
+
+对于操作 $1$，我们可以直接通过普通数组 $\mathcal O(1)$ 实现修改。
+
+对于操作 $2$，我们可以通过前缀和 $\mathcal O(1)$ 实现查询。
+
+然而，若使用普通数组，查询复杂度为 $\mathcal O(n)$；若使用前缀和数组，修改复杂度为 $\mathcal O(n)$。
+
+***
+
+而**树状数组**就是一种兼具修改、查询的**高效**数据结构，修改、查询复杂度均为 $\mathcal O(\log n)$。
+
+> 事实上，树状数组能解决的问题是线段树能解决的问题的子集：树状数组能做的，线段树一定能做；线段树能做的，树状数组不一定可以。然而，树状数组的代码要远比线段树短，时间效率常数也更小，因此仍有学习价值。
+
+# 原理
+
+## 维护可差分信息
+
+> 普通树状数组维护的信息及运算要满足 **结合律** 且 **可差分**，如加法（和）、乘法（积）、异或等。
+
+* 结合律：$(x\circ y)\circ z=x\circ (y\circ z)$，其中 $\circ$ 是一个二元运算符。
+* 可差分：具有逆运算的运算，即已知 $x\circ y$ 和 $x$ 能求出 $y$。
+
+## 区间划分
+
+将一段长度为 $n$ 的前缀 $[1,n]$ 划分为不超过 $\log n$ 段区间，那么我们仅仅需要合并这 $\log n$ 段区间的信息即可直到原来需要合并 $n$ 个元素才能知道的信息（比如前缀和），而在修改时也仅仅需要至多修改 $\log n$ 段区间，从而使得修改、查询复杂度均为 $\mathcal O(\log n)$。
+
+如图：
+
+![](/img/2024/12/010.svg)
+
+<div style="text-align:center;color:grey;font-size:12px">图片来源：<a href="https://oi-wiki.org/ds/fenwick/#%E5%88%9D%E6%AD%A5%E6%84%9F%E5%8F%97">OI Wiki</a></div>
+
+## 如何划分
+
+令树状数组所使用数组为 $t$。
+
+那么 $t[x]$ 表示的就是 $\large \sum\limits_{i=x-\operatorname{lowbit}(x)+1}^{x}a[i]$。
+
+### $\operatorname{lowbit(x)}$
+
+在树状数组中，$\operatorname{lowbit}(x)$ 为 $x$ 的二进制最低位的 $1$ 的位权，数值上为 `x&-x`。
+
+比如说，$x=5$，$x$ 的二进制为 $100_{(2)}$，则 $\operatorname{lowbit}(x)=2^2=4$。
+
+而 `x&-x` 的原理也很简单。首先你要知道在计算机中，数字以**补码**的形式存储。
+
+（此处的二进制数有效位数只有 $4$ 位，最高位为符号位）
+
+那么对于正数（树状数组中 $\operatorname{lowbit}(x)$ 只会出现正数，见下文），其补码就是符号位 $0$ 接上其二进制；例如 $5$，就是 $0100_{(2)}$。
+
+而负数呢？
+
+先是一个符号位 $1$，随后是二进制逐位取反，最后在加 $1$。那么 $-5$ 的补码便是 $1011_{(2)}+1=1100_{(2)}$。
+
+可以发现，此时 `x&-x` 的确是 $100_{(2)}=2^2=4$。
+
+因为在 $\operatorname{lowbit}(x)$ 的后面全是 $0$，取反得到的全是 $1$，然后再加 $1$，因此 $\operatorname{lowbit}(x)$ 所在位仍然是 $1$，而前面按位取反，全部不一样。
+
+故 $\operatorname{lowbit}(x)$ 为 `x&-x`。
+
+#### 参考代码
+
+```cpp
+int lowbit(int x){
+	return x&-x;
+}
+```
+
+### 区间长度
+
+每一个 $t[x]$ 所表示的区间长度均为 $2^k$，$k$ 为自然数。
+
+那么这个 $2^k$ 也即 $\operatorname{lowbit}(x)$。
+
+## 区间查询与单点修改
+
+### 区间查询
+
+普通树状数组维护数组，每次查询 $query(x)$ 的值都是区间 $[1,x]$ 的值，想要查询 $[l,r]$，$query(r)-query(l)$ 即可（此处维护的是前缀和，其余同理）。
+
+那么 $query(x)$ 是如何工作的呢？
+
+上文中提到，每一个 $t[x]$ 维护的区间长度均为 $\operatorname{lowbit}(x)$，也即 $[x-\operatorname{lowbit}(x)+1,x]$。
+
+那么我们令 $x\leftarrow x-\operatorname{lowbit}(x)$ 直到 $x=0$ 即可。
+
+这样，我们就能够在 $\mathcal O(\log n)$ 的时间内查询。
+
+#### 参考代码
+
+```cpp
+int query(int x){
+	int sum=0;
+	while(x){
+		sum+=t[x];
+		x-=lowbit(x);
+	}return sum;
+}
+```
+
+### 单点修改
+
+若是一个值 $a[x]$ 修改了，那么包含其值的 $t[y]$ 必然也需要修改。
+
+事实上，我们仅仅需要令 $x\leftarrow x+\operatorname{lowbit}(x)$ 直到 $x>n$ 即可。
+
+这是因为在树状数组所构树上，$x+\operatorname{lowbit}(x)$ 是 $x$ 的父节点（具体见[下文](#树状数组所构树)）。
+
+#### 参考代码
+
+```cpp
+void add(int x,int k){
+	while(x<=n){
+		t[x]+=k;
+		x+=lowbit(x);
+	}
+}
+```
+
+#### 树状数组所构树
+
+
+
+## 单点查询与区间修改
+
+## 区间修改与区间查询
