--- a/_posts/2024-10-02-1.md
+++ b/_posts/2024-10-02-1.md
@@ -15,6 +15,8 @@ words:
   - 区间修改
 ---
 
+> <div style="text-align: center;color: red;">这仅仅是过去写的一个记录，更详细请见<a href="/2024/12/14/9/#区间修改与区间查询">树状数组详解</a>，本题是作为例题讲解的。</div>
+>
 > [洛谷同步链接](https://www.luogu.com.cn/article/zmv97th3)
 >
 > [题目传送门](https://www.luogu.com.cn/problem/P2357)
