--- a/_posts/2024-12-14-9.md
+++ b/_posts/2024-12-14-9.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "树状数组详解"
-subtitle: "例题：树状数组 1（P3374）、树状数组 2（P3368）"
+subtitle: "例题：树状数组 1（P3374）、树状数组 2（P3368）、守墓人（P2357）"
 date: 2024-12-14
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -12,7 +12,7 @@ tags:
 words:
 ---
 
-> 题目传送门：[树状数组 1](https://www.luogu.com.cn/problem/P3374) [树状数组 2](https://www.luogu.com.cn/problem/P3368)
+> 题目传送门：[树状数组 1](https://www.luogu.com.cn/problem/P3374)、[树状数组 2](https://www.luogu.com.cn/problem/P3368) 、[守墓人](https://www.luogu.com.cn/problem/P2357)
 >
 > 防止日后忘记。
 
@@ -98,9 +98,9 @@ int lowbit(int x){
 
 那么这个 $2^k$ 也即 $\operatorname{lowbit}(x)$。
 
-## 区间查询与单点修改
+# 区间查询与单点修改（[树状数组 1](https://www.luogu.com.cn/problem/P3374)）
 
-### 区间查询
+## 区间查询
 
 普通树状数组维护数组，每次查询 $query(x)$ 的值都是区间 $[1,x]$ 的值，想要查询 $[l,r]$，$query(r)-query(l)$ 即可（此处维护的是前缀和，其余同理）。
 
@@ -112,7 +112,7 @@ int lowbit(int x){
 
 这样，我们就能够在 $\mathcal O(\log n)$ 的时间内查询。
 
-#### 参考代码
+### 参考代码
 
 ```cpp
 int query(int x){
@@ -124,15 +124,25 @@ int query(int x){
 }
 ```
 
-### 单点修改
+## 单点修改
 
 若是一个值 $a[x]$ 修改了，那么包含其值的 $t[y]$ 必然也需要修改。
 
-事实上，我们仅仅需要令 $x\leftarrow x+\operatorname{lowbit}(x)$ 直到 $x>n$ 即可。
+而 $t[x]$ 被 $t[x+\operatorname{lowbit}(x)]$ 包含。
 
-这是因为在树状数组所构树上，$x+\operatorname{lowbit}(x)$ 是 $x$ 的父节点（具体见[下文](#树状数组所构树)）。
+证明：
 
-#### 参考代码
+令 $y=x+\operatorname{lowbit}(x)$，$x=p\times 2^{k+1}+2^k$，其中 $k$ 为**自然数**，$s$ 为**实数**。
+
+则 $y=(p+1)\times 2^{k+1},y-\operatorname{lowbit}(y)+1=p\times 2^{k+1}+1$。
+
+考虑到 $x-\operatorname{lowbit}(x)+1=p\times 2^k+1$，因此 $y-\operatorname{lowbit}(y)+1<x-\operatorname{lowbit}(x)+1$。
+
+又考虑到 $y$ 显然大于 $x$，因此 $t[x]$ 被 $t[x+\operatorname{lowbit}(x)]$ 包含。
+
+因此，我们仅仅需要令 $x\leftarrow x+\operatorname{lowbit}(x)$ 直到 $x>n$ 即可。
+
+### 参考代码
 
 ```cpp
 void add(int x,int k){
@@ -143,10 +153,319 @@ void add(int x,int k){
 }
 ```
 
-#### 树状数组所构树
+## 例题 AC 代码
 
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm> 
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+const int N=5e5;
+int n,m,op,x,k,t[N+1];
+int lowbit(int x){
+	return x&-x;
+}
+void build(){
+	scanf("%d %d",&n,&m);
+	for(int i=1;i<=n;i++){
+		scanf("%d",&x);
+		t[i]+=x;
+		int j=i+lowbit(i);
+		if(j<=n)t[j]+=t[i];
+	}
+}
+void add(int x,int k){
+	while(x<=n){
+		t[x]+=k;
+		x+=lowbit(x);
+	}
+}
+int query(int x){
+	int sum=0;
+	while(x){
+		sum+=t[x];
+		x-=lowbit(x);
+	}return sum;
+}
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	build();
+	while(m--){
+		scanf("%d %d %d",&op,&x,&k);
+		switch(op){
+			case 1:
+				add(x,k);
+				break;
+			case 2:
+				printf("%d\n",query(k)-query(x-1));
+				break; 
+		}
+	}
+	
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
 
+# 单点查询与区间修改（[树状数组 2](https://www.luogu.com.cn/problem/P3368)）
 
-## 单点查询与区间修改
+这很简单，同样**以前缀和为例**。
 
-## 区间修改与区间查询
+你只需要维护一个**一阶差分数组**即可。
+
+比如你要给区间 $a[l,r]$ 加上 $5$，那么在差分数组 $b$ 上你只需要：
+$$
+b[l]\leftarrow b[l]+5\\
+b[r+1]\leftarrow b[r+1]-5
+$$
+这样就维护了**区间修改**。
+
+对于单点查询，$a[x]$ 的值显然就是 $\sum\limits_{i=1}^x b[x]$，树状数组维护 $b$ 的前缀和即可。
+
+## 例题 AC 代码
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm> 
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+const int N=5e5;
+int n,m,op,x,y,k,b[N+1];
+int lowbit(int x){
+	return x&-x;
+}
+void build(){
+	int x0=0;
+	scanf("%d %d",&n,&m);
+	for(int i=1;i<=n;i++){
+		scanf("%d",&x);
+		b[i]+=x-x0;
+		x0=x;
+		int j=i+lowbit(i);
+		if(j<=n)b[j]+=b[i];
+	}
+}
+void add(int x,int k){
+	while(x<=n){
+		b[x]+=k;
+		x+=lowbit(x);
+	}
+}
+int query(int x){
+	int sum=0;
+	while(x){
+		sum+=b[x];
+		x-=lowbit(x);
+	}return sum;
+}
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	build();
+	while(m--){
+		scanf("%d %d",&op,&x);
+		switch(op){
+			case 1:
+				scanf("%d %d",&y,&k);
+				add(x,k);add(y+1,-k);
+				break;
+			case 2:
+				printf("%d\n",query(x));
+		}
+	}
+	
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+
+# 区间修改与区间查询
+
+这是个问题，我们以[守墓人](https://www.luogu.com.cn/problem/P2357)为例题。
+
+我当时为那道题写了一个简单的[个人记录](/2024/10/02/1/)：
+
+> 对于数组 $a$ 的差分数组 $d$，我们可以使用 $d$ 求出 $a$ 的前缀和数组 $s$。
+>
+> 由于 $d_k=a_k-a_{k-1}$，则：
+> $$
+> a_k=d_1+d_2+d_3+\cdots+d_k
+> $$
+> 那么：
+> $$
+> \begin{aligned} s_k&=a_1+a_2+a_3+\cdots+a_k\\ &=d_1+(d_1+d_2)+(d_1+d_2+d_3)+\cdots+(d_1+d_2+d_3+\cdots+d_k)\\ &=k\times d_1+(k-1)\times d_2+(k-2)\times d_3+(k-3)\times d_4+\cdots+d_k\\ &=(k+1)(d_1+d_2+d_3+\cdots+d_k)-(1\times d_1+2\times d_2+3\times d_3+\cdots+k\times d_k)\\ &=(k+1)\sum_{i=1}^k d_i-\sum_{i=1}^k d_i\times i \end{aligned}
+> $$
+>
+> ***
+>
+> 维护树状数组 $d_i=a_i-a_{i-1}$ 和树状数组数组 $c_i=d_i\times i$ 即可。
+>
+> ***
+>
+> 关于各个操作：
+>
+> 1. 差分处理
+> 2. 由1同理
+> 3. 由1同理
+> 4. 计算前缀和
+> 5. 由4同理
+
+***
+
+首先，需要明确的是，**单点操作可以视为长度为 $1$ 的区间操作**。
+
+因此原题中的有效操作就两个：
+
+* 操作 $1$：将区间 $a[l,r]$ 加上 $k$。
+* 操作 $4$：求 $\sum\limits_{i=l}^r a_i$。
+
+我们可以维护一个**一阶差分数组** $d$ 。
+
+那么，对于区间修改，我们仅仅需要像上一种情况中那样：
+$$
+d[l]\leftarrow d[l]+k\\
+d[r+1]\leftarrow d[r+1]-k
+$$
+但是区间查询呢？
+
+对于单点查询，可以通过 $query(x)$ 实现 $\mathcal O(\log n)$，但是显然不可能遍历 $[l,r]$，每次都调用查询，因为这样是 $\mathcal O(n\log n)$ 的。
+
+这时候就需要用到我们上面的个人记录中的结论了。我们可以使用 $d$ 数组求出前缀和数组，前缀和数组上相减即可。
+
+具体参见代码。
+
+## 例题 AC 代码
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+typedef long long ll;
+const ll N=2e5;
+ll n,f,a[N+1],d[N+1],c[N+1];
+ll lowbit(ll x){
+	return x&-x;
+}
+void build(ll a[]){
+	for(int i=1;i<=n;i++){
+		int j=i+lowbit(i);
+		if(j<=n)a[j]+=a[i];
+	}
+}
+void add(ll x,ll k){
+	ll pl=x;
+	while(x<=n){
+		d[x]+=k;
+		c[x]+=pl*k;
+		x+=lowbit(x);
+	}
+}
+ll query(ll x){
+	ll sum=0,pl=x+1;
+	while(x){
+		sum+=pl*d[x]-c[x];
+		x-=lowbit(x);
+	}return sum;
+}
+void s1(){
+	ll l,r,k;
+	scanf("%lld %lld %lld",&l,&r,&k);
+	add(l,k);
+	add(r+1,-k);
+}
+void s2(){
+	ll k;
+	scanf("%lld",&k);
+	add(1,k);
+	add(2,-k);
+}
+void s3(){
+	ll k;
+	scanf("%lld",&k);
+	add(1,-k);
+	add(2,k);
+}
+void s4(){
+	ll l,r;
+	scanf("%lld %lld",&l,&r);
+	printf("%lld\n",query(r)-query(l-1));
+}
+void s5(){
+	printf("%lld\n",query(1));
+}
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	 
+	scanf("%lld %lld",&n,&f);
+	for(int i=1;i<=n;i++){
+		scanf("%lld",a+i);
+		d[i]=a[i]-a[i-1];
+		c[i]=d[i]*i;
+	}build(d);build(c);
+	while(f--){
+		ll op;
+		scanf("%lld",&op);
+		switch(op){
+			case 1:s1();break;
+			case 2:s2();break;
+			case 3:s3();break;
+			case 4:s4();break;
+			case 5:s5();break;
+		}
+	}
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+
+# 技巧
+
+### 树状数组的清空（时间戳优化）
+
+清空树状数组是 $\mathcal O(n)$ 的，因此在多组数据时，这是一种常用的技巧。
+
+即定义数组 $tag[i]$ 表示 $t[i]$ 的值是第几组数据的，若 $i$ 不为当前数据组编号，则 $t[i]$ 的值即初始值 $0$（或其他初始值）。
