--- a/_posts/2024-12-21-2.md
+++ b/_posts/2024-12-21-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[SCOI2010] 序列操作"
+title: "题解：[SCOI2010] 序列操作"
 subtitle: "洛谷P2572"
 date: 2024-12-21
 author: "TH911"
@@ -189,7 +189,7 @@ void set(int p,int l,int r,int k){
         t[p].suf[k^1]=0;
 
         t[p].set=k;
-        t[p].reverse=false;
+        t[p].reverse=false;//注意清除！
         return;
     }
     down(p);
@@ -203,7 +203,7 @@ void set(int p,int l,int r,int k){
 
 唯一需要注意的就是，$reverse$ 是 `bool` 变量，逻辑运算符 `!` 取反即可。
 
-然后就是直接 $swap()$ 四个信息。
+然后就是直接交换四个信息。
 
 ### 参考代码
 
@@ -226,6 +226,8 @@ void reverse(int p,int l,int r){
 
 ## 查询区间内 $1$ 的个数
 
+就是求 $cnt_1$ 意义上的区间和。
+
 ### 参考代码
 
 ```cpp
@@ -239,7 +241,25 @@ int query(int p,int l,int r,int k){
 }
 ```
 
+## 查询区间内最多连续 $1$ 的个数
 
+首先在不考虑“跨越中线”的情况下，即求 $len$ 意义下的区间最大值。
+
+然后我们考虑跨越中线，类似的也就是把左子树的后缀与右子树的前缀长度加起来就行，**注意记得取 $\min$，防止超出给定区间**。
+
+### 参考代码
+
+```cpp
+int query_len(int p,int l,int r,int k){
+    if(l<=t[p].l&&t[p].r<=r)return t[p].len[k];
+    down(p);
+    int ans=0;
+    if(l<=t[p<<1].r)ans=query_len(p<<1,l,r,k);
+    if(t[p<<1|1].l<=r)ans=max(ans,query_len(p<<1|1,l,r,k));
+    ans=max(ans,min(t[p<<1].suf[k],t[p<<1].r-l+1) + min(t[p<<1|1].pre[k],r-t[p<<1|1].l+1));
+    return ans;
+}
+```
 
 # AC 代码
 
@@ -446,4 +466,3 @@ int main(){
 	return 0;
 }
 ```
-
